--- a/index.html
+++ b/index.html
@@ -4,49 +4,49 @@
 <head>
   <meta charset="utf-8">
   <title>Colmar Academy</title>
-  <meta name = "viewport" content = "width=device-width, initial-scale=1.0, maximum-scale=1.0">
   <link href="./resources/css/reset.css" type="text/css" rel="stylesheet">
   <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" href="resources/images/favicon.ico" type="image/x-icon">
+  <meta name = "viewport" content = "width=device-width, initial-scale=1.0, maximum-scale=1.0">
 </head>
 
 <body>
 
   <header class="bar">
-    <div class="logo-bar">
+    <div class="logo-bar desktop">
       <img src="resources\images\ic-logo.svg" alt="Colmar Academy logo">
       <h2>COLMAR</h2><span>Academy</span></h2>
     </div>
 
-    <nav class="menu-items">
+    <nav class="desktop menu-items">
       <ul>
         <li><a href="#">On campus</a></li>
         <li><a href="#">Online</a></li>
         <li><a href="#">For Companies</a></li>
         <li><a href="#">Sign In</a></li>
-     </ul>
-   </nav>
+      </ul>
+    </nav>
 
-   <nav class= "mobile">
-     <img src="resources\images\ic-logo.svg" alt="logo" href="#">
-     <img src="resources\images\ic-on-campus.svg" alt="campus" href="#">
-     <img src="resources\images\ic-online.svg" alt="online" href="#">
-     <img src="resources\images\ic-login.svg" alt="login" href="#">
-   </nav>
+    <nav class= " menu-items mobile">
+      <img src="resources\images\ic-logo.svg" alt="logo" href="#">
+      <img src="resources\images\ic-on-campus.svg" alt="campus" href="#">
+      <img src="resources\images\ic-online.svg" alt="online" href="#">
+      <img src="resources\images\ic-login.svg" alt="login" href="#">
+    </nav>
 
- </header>
+</header>
 
  <section class="container">
     <div class="graphic">
-     <img src="resources\images\banner.jpg" alt="three people studying at table">
+      <img src="resources\images\banner.jpg" alt="three people studying at table">
     </div>
     <div class="learn">
       <div class="text">
-      <h1>Learn something <br>new everyday</h1>
-      <h2>Colmar leads the nation in Responsive Web Page Design</h2>
-      <button type="button">Start Here</button>
-    </div>
+        <h1>Learn something <br>new everyday</h1>
+        <h2>Colmar leads the nation in Responsive Web Page Design</h2>
+        <button type="button">Start Here</button>
+      </div>
     </div>
   </section>
 
@@ -54,38 +54,37 @@
 
 <section class="box">
   <div class="info">
-     <div class="image">
-     <img src="resources\images\information-main.jpg" alt='information'>
-     </div>
+    <div class="image desktop">
+      <img src="resources\images\information-main.jpg" alt='information'>
+    </div>
       <div class="info-content">
-       <h1>It doesn't hurt to keep practicing</h1>
-       <p>"Practicing and perfecting code is why Colmar exists.  Our staff are
+        <h1>It doesn't hurt to keep practicing</h1>
+        <p>"Practicing and perfecting code is why Colmar exists.  Our staff are
          here to insure that you achieve your life goals in programming.  All
          that is needed now is your ambition, drive, and ability to think outside
          of the box"</p>
-       <h4>Emanuel, Sr. strategist at Hiring.com</h4>
-     </div>
-  </div>
+        <h4>Emanuel, Sr. strategist at Hiring.com</h4>
+      </div>
+    </div>
 
 <aside class="boxes">
-
-     <figure class="right-box">
+    <figure class="right-box">
       <div class="side-pic">
-       <img src="resources/images/information-orientation.jpg" alt="people on sidewalk">
-       <img class="mobile" src="resources/images/information-orientation-mobile.jpg"
-          alt="people on sidewalk">
+        <img class="desktop" src="resources/images/information-orientation.jpg" alt="people on sidewalk">
+        <img class="mobile" src="resources/images/information-orientation-mobile.jpg"
+           alt="people on sidewalk">
       </div>
       <figcaption>
-       <h2>Orientation date</h2>
-       <p>Tue 10/11 &amp; Wed 10/12: 8am-3pm</P>
-       <span><a href="#">Read more</a></span>
-     </figcaption>
+        <h2>Orientation date</h2>
+        <p>Tue 10/11 &amp; Wed 10/12: 8am-3pm</P>
+        <span><a href="#">Read more</a></span>
+      </figcaption>
     </figure>
 
 
-     <figure class="right-box">
-       <div class="side-pic">
-        <img src="resources/images/information-campus.jpg" alt="campus info">
+    <figure class="right-box">
+      <div class="side-pic">
+        <img class="desktop" src="resources/images/information-campus.jpg" alt="campus info">
         <img class="mobile" src="resources/images/information-campus-mobile.jpg"
           alt="campus info">
       </div>
@@ -98,18 +97,18 @@
 
     <figure class="right-box">
       <div class="side-pic">
-       <img src="resources/images/information-guest-lecture.jpg" alt="guest lecturer">
-       <img class="mobile"  src="resources/images/information-guest-lecture-mobile.jpg"
-       alt="guest lecturer">
-     </div>
-     <figcaption>
-      <h2>Our guest lectures</h2>
-      <p>Join keynote speaker Oliver <br>Sack
-      about music in medical treatment</p>
-      <span><a href=#>Read more</a></span>
-    </figcaption>
-   </figure>
-</aside>
+        <img class="desktop" src="resources/images/information-guest-lecture.jpg" alt="guest lecturer">
+        <img class="mobile"  src="resources/images/information-guest-lecture-mobile.jpg"
+          alt="guest lecturer">
+      </div>
+      <figcaption>
+        <h2>Our guest lectures</h2>
+        <p>Join keynote speaker Oliver <br>Sack
+           about music in medical treatment</p>
+        <span><a href=#>Read more</a></span>
+      </figcaption>
+    </figure>
+  </aside>
 </section>
 
 
@@ -118,7 +117,7 @@
 
 <section class="learning-section">
   <h2>Start learning</h2>
-  <div class="flex-wrap">
+  <div class="flex-wrap desktop">
 
     <figure class="course">
       <img src="resources/images/course-software.jpg"
@@ -134,11 +133,11 @@
       <img src="resources/images/course-computer-art.jpg"
         alt="computer image">
         <figcaption>
-        <h2>Computer art</h2>
-        <h3>COURSES</h3>
-        <p>Imaging &amp; Design, Web Design, Motion Graphics &amp;
-           Visual Effects, Computer Animation</p>
-      <figcaption>
+          <h2>Computer art</h2>
+          <h3>COURSES</h3>
+          <p>Imaging &amp; Design, Web Design, Motion Graphics &amp;
+            Visual Effects, Computer Animation</p>
+        <figcaption>
     </figure>
 
     <figure class="course">
@@ -149,7 +148,7 @@
         <h3>COURSES</h3>
         <p>User Experience Design, User Research, Visual Design</p>
       <figcaption>
-  </figure>
+    </figure>
 
     <figure class="course">
       <img src="resources/images/course-data.jpg"
@@ -189,8 +188,8 @@
          <button type="button" name="button">Data</button>
          <button type="button" name="button">Business</button>
          <button type="button" name="button">Marketing</button>
-       </nav>
-     </section>
+    </nav>
+</section>
 
 <section class="thesis-section">
    <h2>Thesis exhibit</h2>
@@ -199,15 +198,13 @@
        <div class="video">
          <video src="resources/videos/thesis.mp4" controls autoplay="loop">
        </div>
-
-
        <h3>Reimagine urban</h3>
        <div class="thesis-content">
          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
          veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
          ea commodo consequat.
-     </div>
+       </div>
     </div>
 
 
@@ -217,25 +214,24 @@
     <img src="resources/images/thesis-fisma.jpg"
       alt="fisma image">
    </div>
-      <figcaption>
-        <a href="#"><h3>Fisma: Design and Prototype</h3></a>
-        <p>Designer showcase of new prototype product</p>
-      </figcaption>
-    </figure>
+     <figcaption>
+       <a href="#"><h3>Fisma: Design and Prototype</h3></a>
+       <p>Designer showcase of new prototype product</p>
+     </figcaption>
+  </figure>
 
   <figure class="thesis-info">
-   <div class=picture>
-    <img src="resources/images/thesis-now-and-then.jpg"
-      alt="now and then image">
-   </div>
+    <div class=picture>
+      <img src="resources/images/thesis-now-and-then.jpg"
+        alt="now and then image">
+    </div>
       <figcaption>
         <a href="#"><h3>Now and then</h3></a>
         <p>Research study about New York</p>
-         <i class="fa fa-facebook"></i>
       </figcaption>
-  </figure>
-</div>
-</aside>
+   </figure>
+  </div>
+ </aside>
 </section>
 
 <footer>
